[package]
name = "rust-raft"
version = "0.1.0"
authors = ["Alex.F <gfreezy@gmail.com>"]

[dependencies]
log = "*"
log4rs = "*"
hyper = "0.11"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
time = "0.1.35"
itertools = "0.5.6"
docopt = "0.6"
rand = "0.3"
timer = "*"
crossbeam = "*"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
futures = "*"
tokio-core = "*"
error-chain = "0.10.0"

[dependencies.rocket_contrib]
version = "0.2.8"
default-features = false
features = ["json"]
